[tool.poetry]
name = "mdb"
version = "0.1.0"
description = ""
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toolz = "^0.10.0"

[tool.poetry.dev-dependencies]
pycurl = "^7.43.0"
pytest = "^5.4.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
